--- a/timebank_http/Cargo.toml
+++ b/timebank_http/Cargo.toml
@@ -7,14 +7,8 @@ edition = "2021"
 timebank_core = { path = "../timebank_core" }
 timebank_db = { path = "../timebank_db" }
 serde = { version = "1.0", features = ["derive"] }
-serde_json = "1.0"
-chrono = { varsion = "0.4.23", features = ["serde"] }
 tokio = { version = "1.22", features = ["full"] }
 axum = "0.6.0"
 tracing = "0.1"
 tracing-subscriber = "0.3"
-sqlx = { version = "0.6", features = [
-    "runtime-tokio-native-tls",
-    "sqlite",
-    "chrono",
-] }
+sqlx = { version = "0.6", features = ["runtime-tokio-native-tls", "sqlite"] }
