--- a/timebank_http/Cargo.toml
+++ b/timebank_http/Cargo.toml
@@ -8,7 +8,7 @@ timebank_core = { path = "../timebank_core" }
 timebank_db = { path = "../timebank_db" }
 serde = { version = "1.0", features = ["derive"] }
 tokio = { version = "1.22", features = ["full"] }
-axum = "0.6.0"
+axum = { version = "0.6.0", features = ["http2"] }
 tracing = "0.1"
 tracing-subscriber = "0.3"
-sqlx = { version = "0.6", features = ["runtime-tokio-native-tls", "sqlite"] }
+sqlx = { version = "0.6", features = ["runtime-tokio-rustls", "sqlite"] }
