--- a/timebank_http/Cargo.toml
+++ b/timebank_http/Cargo.toml
@@ -14,3 +14,4 @@ tracing = "0.1"
 tracing-subscriber = "0.3"
 sqlx = { version = "0.6", features = ["runtime-tokio-rustls", "sqlite"] }
 tower-http = { version = "0.3.5", features = ["cors"] }
+job_scheduler = "1.2.1"
