--- a/timebank_http/Cargo.toml
+++ b/timebank_http/Cargo.toml
@@ -15,3 +15,4 @@ tracing-subscriber = "0.3"
 sqlx = { version = "0.6", features = ["runtime-tokio-rustls", "sqlite"] }
 tower-http = { version = "0.3.5", features = ["cors"] }
 job_scheduler = "1.2.1"
+axum-client-ip = "0.3.0"
