--- a/Cargo.toml
+++ b/Cargo.toml
@@ -2,5 +2,8 @@
 members = ["timebank_core", "timebank_csv", "timebank_db", "timebank_http"]
 
 [profile.release]
+opt-level = "z"
 lto = true
+codegen-units = 1
 strip = true
+panic = "abort"
