--- a/timebank_csv/Cargo.toml
+++ b/timebank_csv/Cargo.toml
@@ -6,9 +6,9 @@ edition = "2021"
 [dependencies]
 timebank_core = { path = "../timebank_core" }
 timebank_db = { path = "../timebank_db" }
-csv = "1"
-serde = { version = "1", features = ["derive"] }
-tokio = { version = "1", features = ["full"] }
-glob = "0"
-tracing = "0"
-tracing-subscriber = "0"
+csv = "*"
+serde = { version = "*", features = ["derive"] }
+tokio = { version = "*", features = ["full"] }
+glob = "*"
+tracing = "*"
+tracing-subscriber = "*"
