--- a/timebank_db/Cargo.toml
+++ b/timebank_db/Cargo.toml
@@ -5,6 +5,6 @@ edition = "2021"
 
 [dependencies]
 timebank_core = { path = "../timebank_core" }
-serde = { version = "1", features = ["derive"] }
-sqlx = { version = "0", features = ["runtime-tokio-rustls", "sqlite"] }
-tokio = { version = "1", features = ["full"] }
+serde = { version = "*", features = ["derive"] }
+sqlx = { version = "*", features = ["runtime-tokio-rustls", "sqlite"] }
+tokio = { version = "*", features = ["full"] }
