--- a/timebank_http/Cargo.toml
+++ b/timebank_http/Cargo.toml
@@ -6,12 +6,13 @@ edition = "2021"
 [dependencies]
 timebank_core = { path = "../timebank_core" }
 timebank_db = { path = "../timebank_db" }
-serde = { version = "1", features = ["derive"] }
-serde_json = "1"
-tokio = { version = "1", features = ["full"] }
-axum = { version = "0", features = ["http2"] }
-tracing = "0"
-tracing-subscriber = "0"
-sqlx = { version = "0", features = ["runtime-tokio-rustls", "sqlite"] }
-tower-http = { version = "0", features = ["cors"] }
-job_scheduler = "1"
+serde = { version = "*", features = ["derive"] }
+serde_json = "*"
+tokio = { version = "*", features = ["full"] }
+axum = { version = "*", features = ["http2"] }
+tracing = "*"
+tracing-appender = "*"
+tracing-subscriber = "*"
+sqlx = { version = "*", features = ["runtime-tokio-rustls", "sqlite"] }
+tower-http = { version = "*", features = ["cors"] }
+job_scheduler = "*"
